More image improvements, embeds videos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1105,13 +1105,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 #gallery .owl-item {
   border-left: 2px solid #fff;
   border-right: 2px solid #fff;
-  overflow-x:hidden;
+  /*overflow-x:hidden;*/
 }
 
-#gallery .owl-item img{
+/*#gallery .owl-item img{
   height:300px;
   width:auto;
-}
+}*/
 
 
 #gallery .owl-dot {
