--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1197,6 +1197,21 @@ body.mobile-nav-active #mobile-nav-toggle {
   transition: all 0.4s ease-in-out;
 }
 
+#supporters .btn {
+  font-size: 15px;
+  border-radius: 50px;
+  padding: 10px 40px;
+  transition: all 0.2s;
+  background-color: #f82249;
+  border: 0;
+  color: #fff;
+  margin-top:20px;
+}
+
+#supporters .btn:hover {
+  background-color: #e0072f;
+}
+
 /*--------------------------------------------------------------
 # F.A.Q Section
 --------------------------------------------------------------*/
